Fixed admin mobile footernav issues, and updated a few GUI components

--- a/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
+++ b/src/app/components/admin/admin-core/admin-cards/admin-cards-edit/admin-cards-edit.component.html
@@ -62,7 +62,7 @@
 <!-- * CARDS * -->
 
 <div class="row mt-5">
-    <div class="container new-page">
+    <div class="container-fluid new-page">
         <div class="row">
             <!-- * Card 1 * -->
             <div class="col-md-4">
