--- a/src/app/components/admin/admin-core/admin-meta/admin-meta.component.css
+++ b/src/app/components/admin/admin-core/admin-meta/admin-meta.component.css
@@ -2,7 +2,7 @@ pre > textarea {
     font-size: 13px;
     font-family:  'SF Mono', 'Roboto Mono', 'Menlo', 'consolas', monospace;
     /*background-color: #2b2b2b;*/
-    background-color: #333333;
+    background-color: #282E3E;
     /*color: #a56f37;*/
     color: #a1b0c0;
     letter-spacing: 1px;
