--- a/src/app/components/admin/admin-core/admin-meta/admin-meta.component.html
+++ b/src/app/components/admin/admin-core/admin-meta/admin-meta.component.html
@@ -1,4 +1,4 @@
-<div class="row mb-5 mt-3">
+<div class="row mt-5">
     <div class="col-md-6 mx-auto">
         <div class="card admin-badge-card">
             <div class="card-body">
@@ -45,7 +45,7 @@
                             </label>
                             <pre>
                                  <textarea type="text"
-                                           rows="3"
+                                           rows="4"
                                            class="form-control"
                                            placeholder="Enter description of site here"
                                            [(ngModel)]="meta.metaDesc"
@@ -60,7 +60,7 @@
                             </label>
                             <pre>
                                  <textarea type="text"
-                                           rows="1"
+                                           rows="3"
                                            class="form-control"
                                            placeholder="Enter author here..."
                                            [(ngModel)]="meta.metaAuthor"
@@ -76,7 +76,7 @@
                             </label>
                             <pre>
                                  <textarea type="text"
-                                           rows="2"
+                                           rows="4"
                                            class="form-control"
                                            placeholder="Enter keywords here..."
                                            [(ngModel)]="meta.metaKeywords"
@@ -92,7 +92,7 @@
                             </label>
                             <pre>
                                  <textarea type="text"
-                                           rows="2"
+                                           rows="3"
                                            class="form-control"
                                            placeholder="Enter keywords here..."
                                            [(ngModel)]="meta.metaImageURL"
@@ -149,7 +149,7 @@
                         </div>
 
 
-                        <button type="submit" class="btn btn-primary mb-5">
+                        <button type="submit" class="btn btn-secondary mb-5">
                             <i class="fa fa-chart-line"></i>&nbsp;Save Meta
                         </button>
 
