--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -1,5 +1,5 @@
 <!-- * ADMIN-PAGE-NEW * -->
-<div class="row mb-4">
+<div class="row mb-4 mt-3">
     <div class="container">
         <div class="col-md-12">
             <a class="btn btn-default"
