--- a/src/app/components/admin/admin-core/admin-ads/admin-ads.component.html
+++ b/src/app/components/admin/admin-core/admin-ads/admin-ads.component.html
@@ -1,4 +1,4 @@
-<div class="row mb-5 mt-3">
+<div class="row mt-5">
     <div class="col-md-6 mx-auto">
         <div class="card admin-badge-card">
             <div class="card-body">
@@ -17,7 +17,9 @@
 
 <div class="row m-4 pl-5">
     <div class="container">
-        <a [routerLink]="['/admin/settings']" class="back-pages"><i class="fal fa-arrow-circle-left"></i>&nbsp;Settings</a>
+        <a [routerLink]="['/admin/settings']" class="btn btn-default">
+            <i class="fal fa-arrow-circle-left"></i>&nbsp;Settings
+        </a>
     </div>
 </div>
 
@@ -85,7 +87,7 @@
                         </div>
 
 
-                        <button type="submit" class="btn btn-primary mb-5">
+                        <button type="submit" class="btn btn-secondary mb-5">
                             <i class="fa fa-money-bill-wave"></i>&nbsp;Save Ads
                         </button>
 
