--- a/src/app/components/admin/admin-core/admin-featured-blog-posts/admin-featured-blog-posts-edit/admin-featured-blog-posts-edit.component.html
+++ b/src/app/components/admin/admin-core/admin-featured-blog-posts/admin-featured-blog-posts-edit/admin-featured-blog-posts-edit.component.html
@@ -96,7 +96,7 @@
 <!-- * POSTS * -->
 
 <div class="row">
-    <div class="container new-page">
+    <div class="container-fluid new-page">
         <div class="row">
             <!-- * Post 1 * -->
             <div class="col-md-4">
