--- a/src/app/components/admin/admin-home-page/admin-home-page.component.html
+++ b/src/app/components/admin/admin-home-page/admin-home-page.component.html
@@ -1,4 +1,4 @@
-<div class="row mb-5 mt-3">
+<div class="row mt-5">
     <div class="col-md-6 mx-auto">
         <div class="card admin-badge-card">
             <div class="card-body">
@@ -16,8 +16,8 @@
 
 
 <!-- * Page Sections * -->
-<div class="row mt-5">
-    <div class="container">
+<div class="row">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
                 <ng-template #homeLoading>
