--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -10,7 +10,7 @@
             <!-- * Navbar * -->
             <ddw-admin-navbar></ddw-admin-navbar>
             <!-- * Fab Toggle Button * -->
-            <i class="fal"
+            <i class="fa"
                [ngClass]="{'fa-arrow-alt-to-left':toggleSidenav,
                    'fa-arrow-alt-from-left':!toggleSidenav}"
                (click)="onToggleSidenav()"
