--- a/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.css
+++ b/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.css
@@ -22,6 +22,20 @@ img.user-image {
     max-width: 25px;
 }
 
+/* Navbar Button */
+button.btn-open[_ngcontent-c3] {
+    color: #a3a4a6;
+    border: 1px solid #2E3445;
+    background-color: #292E3D;
+    margin-right: 2em;
+}
+
+.btn-text {
+    color: #a3a4a6;
+    border-color: #a3a4a6;
+    background-color: #292E3D;
+}
+
 button.btn-default {
     color: #a3a4a6;
 }
