--- a/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
@@ -21,9 +21,13 @@
 
         <ul class="navbar-nav ml-auto text-right">
             <li class="nav-item" *ngIf="isLoggedIn">
-                <button class="btn new-page btn-sm float-right mt-2 mr-5"
-                        style="background-color:#9d9fa1; border-radius:0;"
-                        [routerLink]="['/admin/pages/new']"><i class="fa fa-file-plus"></i>&nbsp; New Page
+                <button mat-raised-button
+                        color="link"
+                        class="nav-link btn-open"
+                        (click)="openBottomSheet()">
+                    <span class="btn-text">
+                    <i class="fal fa-plus-hexagon"></i> Add New
+                </span>
                 </button>
             </li>
             <li class="nav-item" *ngIf="user && isLoggedIn">
