--- a/src/app/components/admin/admin-press-release/admin-press-release-new/admin-press-release-new.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-new/admin-press-release-new.component.html
@@ -1,5 +1,5 @@
 <!-- * ADMIN-PRESS-RELEASES-NEW * -->
-<div class="row mb-4">
+<div class="row mb-4 mt-5">
     <div class="container">
         <div class="col-md-12">
             <a class="btn btn-default"
