--- a/src/app/components/admin/admin-user/admin-user.component.html
+++ b/src/app/components/admin/admin-user/admin-user.component.html
@@ -1,10 +1,4 @@
-<div class="row" *ngIf="isAdmin">
-    <div class="container">
-        <button class="btn btn-primary btn-sm mb-3 float-right"
-                [routerLink]="['new']"><i class="fa fa-user-plus"></i>&nbsp;New User
-        </button>
-    </div>
-</div>
+<!-- * USER * -->
 <div class="row">
     <div class="container">
         <router-outlet></router-outlet>
