--- a/src/app/components/admin/admin-calendar/admin-calendar-new/admin-calendar-new.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-new/admin-calendar-new.component.html
@@ -3,12 +3,11 @@
     <div class="col-md-6 mx-auto">
         <div class="card">
             <div class="card-body">
-                <h1 class="text-center text-secondary pb-4 pt-3">
-                    <span class="text-dark">
+                <h1 class="text-center pb-4 pt-3 admin-badge">
                <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
                     alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
                         <i class="fa fa-calendar"></i>&nbsp;Admin
-                    </span> New Calendar
+                    New Calendar
                 </h1>
             </div>
         </div>
