--- a/src/app/components/admin/admin-home-page/admin-home-page.component.html
+++ b/src/app/components/admin/admin-home-page/admin-home-page.component.html
@@ -2,12 +2,11 @@
     <div class="col-md-6 mx-auto">
         <div class="card admin-badge-card">
             <div class="card-body">
-                <h1 class="text-center text-secondary pb-4 pt-3">
-                    <span class="text-dark">
+                <h1 class="text-center pb-4 pt-3 admin-badge">
                <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
                     alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
                         <i class="fa fa-home"></i>&nbsp;Admin
-                    </span> Home Page
+                    Home Page
                 </h1>
             </div>
         </div>
@@ -16,7 +15,7 @@
 
 
 <!-- * Page Sections * -->
-<div class="row">
+<div class="row mt-4">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
