Reverted typescript functions back to javascript functions to branch that had edits

--- a/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-edit/admin-calendar-edit.component.html
@@ -73,6 +73,7 @@
                             </label>
                             <input type="text"
                                    class="form-control"
+                                   required
                                    [(ngModel)]="displayName"
                                    formControlName="displayName"/>
                         </div>
