--- a/src/app/components/admin/admin-calendar/admin-calendar-new/admin-calendar-new.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-new/admin-calendar-new.component.html
@@ -69,6 +69,7 @@
                             </label>
                             <input type="text"
                                    class="form-control"
+                                   required
                                    formControlName="displayName"/>
                         </div>
                         <!-- * Date 1 * -->
