--- a/src/styles.css
+++ b/src/styles.css
@@ -26,9 +26,9 @@ h1, h2, h3 {
 }
 
 h1.admin-badge, h1.admin-badge > i.fa  {
-    background-color: #4A5157;
+    background-color: #565656;
     color: transparent;
-    text-shadow: 0 1px 3px rgba(255,255,255,0.5);
+    text-shadow: 0px 1px 2px rgba(255,255,255,0.5);
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
