--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ h1, h2, h3 {
 }
 
 h1.admin-badge, h1.admin-badge > i.fa  {
-    background-color: #27272E;
+    background-color: #686D70;
     color: transparent;
     text-shadow: 0 1px 2px rgba(255,255,255,0.4);
     -webkit-background-clip: text;
