Made admin GUI Updates, fixed bug for users not being created properly, Fixed Ad error issue, added Google Custom Search classes to CSS for styling

--- a/src/app/components/admin/admin-core/admin-mobile-footernav/admin-mobile-footernav.component.html
+++ b/src/app/components/admin/admin-core/admin-mobile-footernav/admin-mobile-footernav.component.html
@@ -15,7 +15,7 @@
     <button mat-button
             class="menu-icon"
             routerLinkActive="active"
-            *ngIf="allowSignup"
+            *ngIf="allowSignup && !isLoggedIn"
             [routerLink]="['/admin/signup']">
         <i class="fa fa-address-card"></i>
         <br>
