--- a/src/app/components/admin/admin-calendar/admin-calendar-list/admin-calendar-list.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-list/admin-calendar-list.component.html
@@ -1,4 +1,19 @@
 <!-- * ADMIN-CALENDAR-LIST * -->
+<div class="row mb-5 mt-3">
+    <div class="col-md-6 mx-auto">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="text-center pb-4 pt-3 admin-badge">
+                    <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
+                         alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
+                    <i class="fa fa-calendar-alt"></i>&nbsp;Admin
+                    All Calendars
+                </h1>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- * button nav group * -->
 <div class="row m-4 pl-5" [@simpleFadeAnimation]="'in'">
     <div class="container">
