--- a/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <span class="nav-item nav-link current-date" [routerLink]="['pages']">
-                <i class="fa fa-calendar"></i> {{ currentDate | date:'fullDate' }}
+                <i class="fa fa-calendar-alt"></i> {{ currentDate | date:'fullDate' }}
             </span>
             <!--<a class="nav-item nav-link" [routerLink]="['users']"><i class="fa fa-user"></i>&nbsp;Users</a>-->
             <!--<a class="nav-item nav-link" [routerLink]="['/']"><i class="fa fa-globe"></i>&nbsp;Live Site</a>-->
@@ -26,7 +26,7 @@
                         class="nav-link btn-open"
                         (click)="openBottomSheet()">
                     <span class="btn-text">
-                    <i class="fal fa-plus-hexagon"></i> Add New
+                    <i class="fa fa-plus-hexagon"></i> Quick Add
                 </span>
                 </button>
             </li>
