--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
@@ -1,4 +1,7 @@
 <!-- * ADMIN-PAGE-DETAILS (PREVIEW) * -->
+<!-- * FontAwesome 5.1 * -->
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css"
+      integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
 <!-- * Edit Options Sub-Navbar * -->
 <div class="row mb-4">
     <div class="container">
@@ -96,8 +99,8 @@
                     <h4 class="card-title">{{ page.title }}</h4>
                     <div class="card-subtitle text-muted mb-3">Created By: {{ page.author }}</div>
                     <p class="card-text">
-                        URL: {{ page.extURL }} <br>
-                        Sort Order #: {{ page.sortOrder }}
+                        URL: <span class="text-primary">{{ page.extURL }}</span> <br>
+                        Sort Order Number: <span class="text-primary">{{ page.sortOrder }}</span>
                     </p>
                     <a [href]="page.extURL"
                        target="_blank"
