--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -1,11 +1,19 @@
 <!-- * ADMIN-PAGE-LIST * -->
-<div class="row">
-    <div class="container">
-        <h2>Pages</h2>
+<div class="row mt-5">
+    <div class="col-md-6 mx-auto">
+        <div class="card admin-badge-card">
+            <div class="card-body">
+                <h1 class="text-center pb-4 pt-3 admin-badge">
+                    <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
+                         alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
+                    <i class="fa fa-layer-group"></i>&nbsp;Admin
+                    Pages
+                </h1>
+            </div>
+        </div>
     </div>
 </div>
-
-<div class="container mb-3">
+<div class="container mt-2">
     <div class="row">
         <div class="col-lg-4 offset-lg-8">
             <div class="card bg-light text-light text-center">
@@ -28,7 +36,7 @@
     </div>
 </div>
 
-<div class="layout-content mb-5" *ngIf="!showListToggle" [@simpleFadeAnimation]="'in'">
+<div class="layout-content mb-5 mt-2" *ngIf="!showListToggle" [@simpleFadeAnimation]="'in'">
     <div class="container card-list">
         <div class="card-columns">
             <ddw-admin-page-item
