--- a/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
+++ b/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
@@ -1,4 +1,18 @@
 <!-- * ADMIN-USER-LIST * -->
+<div class="row mb-5 mt-3">
+    <div class="col-md-6 mx-auto">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="text-center pb-4 pt-3 admin-badge">
+                    <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/ddw-color.png"
+                         alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
+                    <i class="fa fa-users"></i>&nbsp;Admin
+                    All Users
+                </h1>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- Layout content -->
 <div class="layout-content mb-5" [@simpleFadeAnimation]="'in'">
