--- a/src/app/components/core/home/home.component.html
+++ b/src/app/components/core/home/home.component.html
@@ -117,13 +117,14 @@
 <div class="row featured" *ngIf="homePage && !homePage.postsHidden">
     <div class="container">
         <div class="col-md-6 offset-md-3 text-center">
-            <h2 class="card-sec-title">{{ homePage.postsTitle }}</h2>
+            <h2 class="card-sec-title" *ngIf="homePage">{{ homePage.postsTitle }}</h2>
             <div class="col-4 offset-4">
                 <div class="underline"></div>
             </div>
         </div>
     </div>
 </div>
+
 <div class="row blog-posts" *ngIf="homePage && !homePage.postsHidden">
     <div class="container">
         <div class="card-deck">
@@ -268,10 +269,10 @@
 </div>
 
 <!-- * AD Footerbar * -->
-<div class="row">
+<div class="row" *ngIf="footerbar">
     <div class="container">
         <div class="text-center">
-            <div [innerHTML]="footerbar | safeHtml" ddwRunScripts class="ads"></div>
+            <div [innerHTML]="footerbar | safeHtml" runScripts id="myAdSpace"></div>
         </div>
     </div>
 </div>
