--- a/src/styles.css
+++ b/src/styles.css
@@ -25,10 +25,10 @@ h1, h2, h3 {
     /*box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.2);*/
 }
 
-h1.admin-badge, h1.admin-badge > i.fa  {
-    background-color: #686D70;
+h1.admin-badge, h1.admin-badge > i.fa {
+    background-color: #282E3E;
     color: transparent;
-    text-shadow: 0 1px 2px rgba(255,255,255,0.4);
+    text-shadow: 0 1px 2px rgba(255, 255, 255, 0.3);
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
@@ -290,7 +290,7 @@ a.btn.btn-warning.btn-lg:hover {
 
 .home .btn-primary, .block .btn-primary, a.btn.cta, .btn-cta {
     background-color: #F47700;
-    border: 0px none;
+    border: 0 none;
     color: #fff;
     font-size: 18px;
     padding: .5em 2em;
@@ -382,7 +382,7 @@ blockquote {
 
 blockquote::before, blockquote::after {
     color: #fff;
-    font-family: "Roboto";
+    font-family: "Roboto", sans-serif;
     font-size: 50px;
 }
 
@@ -422,15 +422,6 @@ blockquote:after {
     color: #FEBE10;
 }
 
-@media only screen and (min-width: 992px) {
-    .col-quote {
-        padding-left: 3em;
-        padding-right: 3em;
-        padding-top: 1em;
-    }
-
-}
-
 table.ddw1 tbody > tr:first-child td {
     background: #053c60 none repeat scroll 0 0;
     font-size: 14px;
@@ -442,4 +433,101 @@ table.ddw1 tbody > tr:first-child td {
 table.ddw1 td {
     border: 1px solid #eee !important;
     padding: 10px !important;
+}
+
+.mat-fab .mat-button-wrapper {
+    padding: 0 !important;
+    display: inline-block;
+    line-height: 24px;
+}
+
+/* Colin's Searchbar updates */
+.cse .gsc-control-cse, .gsc-control-cse {
+    font-family: Arial, sans-serif;
+    background-color: transparent !important;
+    border: transparent !important;
+}
+
+button.gsc-search-button.gsc-search-button-v2 {
+    font-size: 0px;
+    padding: 6px 27px;
+    width: auto;
+    vertical-align: middle;
+    border: transparent;
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    margin-top: 2px;
+    /* border-color: #000; */
+    background-color: transparent;
+    /* background-image: -webkit-gradient(linear,left top,left bottom,from(#333333),to(#333333)); */
+    background-image: none;
+}
+
+/* Use a different font family for search results */
+.gs-title, .gs-snippet {
+    font-family: "Helvetica Neue", sans-serif;
+}
+
+/* Add a border between individual search results */
+.gs-webResult {
+    border: transparent;
+    padding: 1em;
+}
+
+/* Do no display the count of search results */
+.gsc-result-info {
+    display: none;
+}
+
+/* Hide the Google branding in search results */
+.gcsc-branding {
+    display: none;
+}
+
+/* Hide the thumbnail images in search results */
+.gsc-thumbnail {
+    display: none;
+}
+
+/* Hide the snippets in Google search results */
+.gs-snippet {
+    display: none;
+}
+
+/* Change the font size of the title of search results */
+.gs-title a {
+    font-size: 16px;
+}
+
+/* Change the font size of snippets inside search results */
+.gs-snippet {
+    font-size: 14px;
+}
+
+/* Google Custom Search highlights matching words in bold, toggle that */
+.gs-title b, .gs-snippet b {
+    font-weight: normal;
+}
+
+/* Do no display the URL of web pages in search results */
+.gsc-url-top, .gsc-url-bottom {
+    display: none;
+}
+
+/* Highlight the pagination buttons at the bottom of search results */
+.gsc-cursor-page {
+    font-size: 1.5em;
+    padding: 4px 8px;
+    border: 2px solid #ccc;
+}
+
+/* MOBILE */
+@media only screen and (min-width: 992px) {
+    .col-quote {
+        padding-left: 3em;
+        padding-right: 3em;
+        padding-top: 1em;
+    }
+
 }
