--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -75,7 +75,6 @@
     </li>
 
 
-
     <!-- * Press Releases * -->
     <li class="sidenav-item"
         [ngClass]="{'active open':showPressReleaseToggle, '':!showPressReleaseToggle}"
@@ -130,20 +129,28 @@
         </a>
     </li>
 
+    <!-- * Contacts * -->
+    <li class="sidenav-item" *ngIf="isLoggedIn">
+        <a [routerLink]="['/admin/contacts']" class="sidenav-link">
+            <i class="sidenav-icon ion ion-md-quote"></i>
+            <div><i class="fal fa-address-book"></i>&nbsp;Contacts</div>
+        </a>
+    </li>
+
     <!-- * Cards * -->
     <!--<li class="sidenav-item" *ngIf="isLoggedIn">-->
-        <!--<a [routerLink]="['/admin/cards']" class="sidenav-link">-->
-            <!--<i class="sidenav-icon ion ion-md-quote"></i>-->
-            <!--<div><i class="fal fa-passport"></i>&nbsp;Cards</div>-->
-        <!--</a>-->
+    <!--<a [routerLink]="['/admin/cards']" class="sidenav-link">-->
+    <!--<i class="sidenav-icon ion ion-md-quote"></i>-->
+    <!--<div><i class="fal fa-passport"></i>&nbsp;Cards</div>-->
+    <!--</a>-->
     <!--</li>-->
 
     <!-- * Featured Posts * -->
     <!--<li class="sidenav-item" *ngIf="isLoggedIn">-->
-        <!--<a [routerLink]="['/admin/featured-posts']" class="sidenav-link">-->
-            <!--<i class="sidenav-icon ion ion-md-quote"></i>-->
-            <!--<div><i class="fal fa-passport"></i>&nbsp;Featured Posts</div>-->
-        <!--</a>-->
+    <!--<a [routerLink]="['/admin/featured-posts']" class="sidenav-link">-->
+    <!--<i class="sidenav-icon ion ion-md-quote"></i>-->
+    <!--<div><i class="fal fa-passport"></i>&nbsp;Featured Posts</div>-->
+    <!--</a>-->
     <!--</li>-->
 
 
