Fixed Admin GUI fonts

--- a/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.html
+++ b/src/app/components/admin/admin-core/admin-contact-us/admin-contact-us-details/admin-contact-us-details.component.html
@@ -40,7 +40,7 @@
                         </tr>
                         <tr>
                             <th scope="col">Send Date:</th>
-                            <td><i class="fa fa-calendar-alt"></i> {{ contact.sentDate | date:'medium' }}</td>
+                            <td><i class="fa fa-clock"></i> {{ contact.sentDate | date:'medium' }}</td>
                         </tr>
                         <tr>
                             <th scope="col">Phone Number:</th>
